# musty

./: .gitignore  404.html  LICENSE.md  README.md  database.html  index.html  introduction.html  model-creating.html  model-db-id.html  model-id.html  model.html  print.html  quick-start.html  quickstart.html  searchindex.js  searchindex.json
.github/workflows/: docs.yml  semver.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  model-creating.md  model-db-id.md  quickstart.md
musty/: .gitignore  Cargo.toml  README.md
musty-macro/: Cargo.toml
musty-macro/src/: derive.rs  lib.rs  util.rs
musty-proc-macro/: Cargo.toml
musty-proc-macro/src/: derive.rs  lib.rs  util.rs
musty-proc-macro/src/filter/: filter.rs
musty-proc-macro/src/model/: meta_model.rs  mod.rs  mongo_model.rs
musty/docs/: model-implementing.md  model-macro.md
musty/examples/: filter.rs  mongo.rs  mongo_custom_id_primitive.rs  mongo_custom_id_struct.rs  mongo_find_many.rs  mongo_find_one.rs  mongo_get_by.rs  reference.rs
musty/src/: context.rs  ctx.rs  cursor.rs  db.rs  error.rs  id.rs  lib.rs  model.rs  reference.rs
musty/src/backend/: mod.rs  mongo.rs
musty/src/filter/: filter.rs  mod.rs  op.rs  value.rs
