[package]
name = "musty-proc-macro"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Alex Adewole <alex@bizar.re>", "Jonah Seguin <me@jonahseguin.com>"]
description = "An ODM for NoSQL databases like MongoDB"
categories = ["database", "data-structures"]
keywords = ["mongodb", "database", "bson", "odm", "nosql"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
darling = "0.14.2"
proc-macro-error = "1"

[features]
default = ["mongodb"]
mongodb = []