[package]
name = "musty"
version = "0.1.0"
edition = "2021"
authors = ["Alex Adewole <alex@bizar.re>", "Jonah Seguin <me@jonahseguin.com>"]
readme = "../README.md"
repository = "https://github.com/tsanga/musty"
license = "MIT"
description = "An ODM for NoSQL databases like MongoDB"
categories = ["database", "data-structures"]
keywords = ["mongodb", "database", "bson", "odm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2", default-features = false, optional = true }
bson = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
musty-proc-macro = { path = "../musty-proc-macro" }
anyhow = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1" }
serde_json = "1"

[features]
default = ["mongodb", "bson", "mongodb/tokio-runtime"]

[[example]]
name = "mongo"
path = "examples/mongo.rs"
required-features = ["mongodb"]